examples/bench/bad/typing/generalize1.mlw

(* polymorphic reference *)

parameter x : 'a ref (* => cannot generalize *)
